chore: add validation for external ID column in GeoJSON; update error handling and enhance UI components #78 #80
